# owl-projects

./: .gitignore  PARTNER_GUIDE.md  README.md
IntoTheDarkweb/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_actor_logic.py
IntoTheDarkweb/.actor/: actor.json  input_schema.json  output_schema.json
OnionSentinel/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
OnionSentinel/.actor/: actor.json  input_schema.json  output_schema.json
SecureEmbed/: README.md  package-lock.json  package.json  tsconfig.json
SecureEmbed/examples/: embed.example.json  index.html  serve.js  test-config.json
SecureEmbed/src/: cli.ts  crypto.ts  index.ts  service-worker.ts  types.ts
SecureEmbed/src/providers/: index.ts
SecureEmbed/src/react/: SecureEmbed.tsx
SecureEmbed/src/secure-core/: index.ts  secure-loader.ts  secure-service-worker.ts  wasm-loader.ts
SecureEmbed/src/vanilla/: secure-embed.ts
SecureEmbed/wasm/: asconfig.json
SecureEmbed/wasm/assembly/: index.ts
SecureProbe/: README.md  env.example  pyproject.toml
SecureProbe/secureprobe/: __init__.py  cli.py  models.py  orchestrator.py  rate_limiter.py  reports.py  utils.py
SecureProbe/secureprobe/analyzers/: __init__.py  access_control.py  api_security.py  apt_attacks.py  base.py  bloody_mary.py  chaos_attacks.py  chaos_teen.py  cookie.py  credential_spray.py  crypto_analysis.py  deep_sniff.py  endpoint.py  form.py  header.py  info_leak.py  input_validation.py  js_library_cve.py  memory_assault.py  novel_attacks.py  session_security.py  tls.py
StealthFormBot/: .dockerignore  Dockerfile  README.md  __init__.py  form_handler.py  main.py  models.py  pyproject.toml  requirements.txt
StealthFormBot/.actor/: actor.json  input_schema.json  output_schema.json
StealthFormBot/owl_browser_sdk/owl_browser/: core.py
StealthFormBot/scripts/: prepare_apify_deploy.sh
autoqa-ai-testing/: .gitignore  README.md  env.example  pyproject.toml
autoqa-ai-testing/src/autoqa/: __init__.py  cli.py
autoqa-ai-testing/src/autoqa/api/: main.py
autoqa-ai-testing/src/autoqa/assertions/: engine.py
autoqa-ai-testing/src/autoqa/builder/: __init__.py  intelligent_layer.py  orchestrator.py  test_builder.py
autoqa-ai-testing/src/autoqa/builder/analyzer/: page_analyzer.py  visual_analyzer.py
autoqa-ai-testing/src/autoqa/builder/crawler/: intelligent_crawler.py  state_manager.py
autoqa-ai-testing/src/autoqa/builder/discovery/: __init__.py  api_detector.py  flow_discovery.py  intelligent_builder.py  interaction_analyzer.py  network_monitor.py  state_tracker.py  visibility_analyzer.py
autoqa-ai-testing/src/autoqa/concurrency/: browser_pool.py  runner.py
autoqa-ai-testing/src/autoqa/dsl/: models.py  parser.py  transformer.py
autoqa-ai-testing/src/autoqa/generative/: chaos_agents.py
autoqa-ai-testing/src/autoqa/llm/: __init__.py  assertions.py  client.py  config.py  prompts.py  service.py  vision.py
autoqa-ai-testing/src/autoqa/runner/: __init__.py  intelligent_layer.py  self_healing.py  test_runner.py
autoqa-ai-testing/src/autoqa/storage/: database.py
autoqa-ai-testing/src/autoqa/versioning/: history_tracker.py
autoqa-ai-testing/tests/: conftest.py  test_builder.py  test_dsl.py
autoqa-ai-testing/tests/builder/discovery/: test_visibility_analyzer.py
docs/: Apify_Actor_1_StealthFormBot.md  Apify_Actor_2_VisualDiffMonitor.md  Apify_Actor_3_SessionHarvester.md  Apify_Actor_Ideas.md  Apify_Actor_Ideas_Backlog.md  AutoQA_AI_Testing.md  CrawlForge_Search_Engine.md  DarkWatch_Monitoring.md  EasyCrawl_Web_Data.md  PriceGuard_Ecommerce_Intelligence.md  SecureProbe_Vulnerability_Scanner.md  TrendScope_Social_Analysis.md  openapi.json
easy_crawl/: .gitignore  README.md  start.sh
easy_crawl/backend/: main.py  requirements.txt
easy_crawl/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
easy_crawl/frontend/src/: App.tsx
stress_test/: .env.example  .gitignore  README.md  requirements.txt  run.py
stress_test/flows/: example_login.json  herokuapp_login.json
stress_test/owl_stress/: __init__.py  cli.py  config.py  flow_loader.py  metrics.py  report.py  runner.py
